--- a/css/intro.css
+++ b/css/intro.css
@@ -6,14 +6,24 @@
   grid-template-columns: 1fr 2fr;
   gap: 100px;
   align-items: center;
+  height: 50vh;
 }
 
 .image-perfil {
   img {
-    width: 500xp;
-    height: 500px;
+    width: 16rem;
+    height: 16rem;
     display: flex;
-    border-radius: 50%;
+    border-radius: 100%;
+    border-width: 4px;
+    border-color: #80ff00;
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+      0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+      0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    object-fit: cover;
   }
 }
 
